Fri Feb 25 17:29:12 2005  Steve Huston  <shuston@riverace.com>

	* ace/config-hpux-11.00.h: Always set ACE_HAS_SVR4_DYNAMIC_LINKING.
	  This is now available always.

	* include/makeinclude/platform_hpux_gcc.GNU: Add -Wl,-E to
	  SOFLAGS for linking shared libraries. Per info in
	  Bugzilla #2057, this is needed to have dynamic_cast work across
	  shared libraries. It still doesn't work, and not sure why...

	* tests/DLL_Test.cpp: Use the correct ACE_DEBUG specifier for
	  pointers (%@, not %x).

	* tests/DLL_Test_Impl.cpp: Added an ACE_DEBUG in dynamic_cast_test()
	  to see what's being tested, not only the results.

Fri Feb 25 13:49:27 2005  Steve Huston  <shuston@riverace.com>

	* ace/POSIX_Asynch_IO.{h cpp}: Added 'const' to all the handler_proxy
	  references on Result-type constructors.
	  Removed the ACE_LIB_TEXT around strings to ACE_TRACE.
	  ACE_TRACE adds the ACE_LIB_TEXT.
	  (Asynch_Accept::handle_close()): This can be called if the
	  listen handle gets closed in addition to when the pseudo task
	  is being destroyed. Mark the handle invalid.

	* ace/WIN32_Asynch_IO.{h cpp}: Added 'const' to all the handler_proxy
	  references on Result-type constructors.
	  (accept): Corrected function name in message.
	  (ACE_WIN32_Asynch_Accept_Result::complete): If the accept failed,
	  be sure to close the accept handle created in accept().

	* ace/Asynch_Pseudo_Task.cpp: Removed return value -2 to signify
	  task shutting down, and return -1/errno = ESHUTDOWN instead.
	  Secret values like -2 make maintenance harder.
	  Also removed some of the ACE_ERROR() statements in favor of
	  setting a reasonable errno value. Lets callers know what's going
	  on in the code, not just show it in diagnostic output.

Fri Feb 25 07:08:35 2005  Chad Elliott  <elliott_c@ociweb.com>

        * ace/SOCK_Dgram_Bcast.cpp:

          Added !defined(__APPLE__) to conditional so sockaddr.sa_len
          version of the code will be used.  Fixes SOCK_Bcast_Dgram_Test
          failures.
